[tool.poetry]
name = "bccsu"
version = "0.1.0"
description = ""
authors = ["Cameron Grant <cameron.grant@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
saspy = "^5.4.4"
openpyxl = "^3.1.2"
pywin32 = "^306"
lxml = "^6.0.2"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"
jinja2 = "^3.1.6"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
